[project]
name = "platform-eng-a2a-demo"
version = "0.1.0"
description = ""

dependencies = [
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "httpx",
    "python-dotenv",
    "a2a-sdk",
    "uvicorn",
    "click",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"